--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,8 @@
     },
     "extends": [
         "eslint:recommended",
-        "plugin:@typescript-eslint/recommended"
+        "plugin:@typescript-eslint/recommended",
+        "extends: @mate-academy/eslint-config"
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
