--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lint-staged": "^15.0.2"
   },
   "devDependencies": {
+    "@mate-academy/eslint-config": "0.0.25",
     "@types/cors": "^2.8.15",
     "@types/express": "^4.17.20",
     "@typescript-eslint/eslint-plugin": "^6.8.0",
