--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,20 +1,16 @@
 {
     "env": {
-        "browser": true,
+        "node": true,
         "es2021": true
     },
     "extends": [
         "eslint:recommended",
-        "plugin:@typescript-eslint/recommended",
         "@mate-academy/eslint-config"
     ],
-    "parser": "@typescript-eslint/parser",
     "parserOptions": {
-        "ecmaVersion": "latest",
-        "sourceType": "module"
+        "ecmaVersion": "latest"
     },
     "plugins": [
-        "@typescript-eslint"
     ],
     "rules": {
     }
