--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "node-express-typescript",
+  "name": "pt_product_catalog_be",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "lint": "eslint . --ignore-path .gitignore --fix",
-    "build": "npx tsc",
-    "start": "npm run build && node build/index.js",
-    "dev": "npm run build && nodemon build/index.js"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
@@ -19,15 +18,11 @@
     "lint-staged": "^15.0.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.23.2",
+    "@babel/eslint-parser": "^7.22.15",
     "@mate-academy/eslint-config": "0.0.25",
-    "@types/cors": "^2.8.15",
-    "@types/express": "^4.17.20",
-    "@typescript-eslint/eslint-plugin": "^6.8.0",
-    "@typescript-eslint/parser": "^6.8.0",
     "eslint": "^8.52.0",
     "husky": "^8.0.3",
-    "nodemon": "^3.0.1",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.2.2"
+    "nodemon": "^3.0.1"
   }
 }
