--- a/package.json
+++ b/package.json
@@ -13,16 +13,20 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "lint-staged": "^15.0.2"
+    "lint-staged": "^15.0.2",
+    "pg": "^8.11.3",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.33.0"
   },
   "devDependencies": {
     "@babel/core": "^7.23.2",
     "@babel/eslint-parser": "^7.22.15",
     "@mate-academy/eslint-config": "0.0.25",
+    "dotenv": "^16.3.1",
     "eslint": "^8.52.0",
     "husky": "^8.0.3",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "sequelize-cli": "^6.6.1"
   }
 }
