Migrate to clevercloud DB

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-URL=postgres://pt_product_catalog_dh7q_user:kNXLJGaShgpA04WKIjOQI2Fj8zDFhNFQ@dpg-ckt3ppg168ec73cncic0-a.frankfurt-postgres.render.com/pt_product_catalog_dh7q
+DB_URL=postgres://uxnkh2hgojldvhttlnyh:F9HjTYZr4ByKGANrHAT4L6q3vvfxdw@bevyr3jlndam13vjm33q-postgresql.services.clever-cloud.com:50013/bevyr3jlndam13vjm33q
